# domain-adaptation-with-optimal-transport

./: .gitmodules  README.md  import sys.py  pyproject.toml  pyproject.toml.bak  requirements.txt
src/: common.py  datasets.py  test.py
src/domain_adaptation_ot/experiment_01/: transport.py
src/tpami2016_optimal_transport_domain_adaptation/: common.py  datasets.py  train_and_evaluate.py
src/tpami2016_optimal_transport_domain_adaptation/experiment_01/: train.py  train_and_evaluate.py  transport.py
src/tpami2016_optimal_transport_domain_adaptation/experiment_02/: train_and_evaluate.py
src/tpami2016_optimal_transport_domain_adaptation/notebooks/: Optimal transport for domain adaptation.ipynb
