[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-adaptation-ot"
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "POT",
    "matplotlib",
    "seaborn",
    "skada",
    "pbda @ file:external/pbda",
]

[tool.setuptools.packages.find]
where = ["src"]
